# plip-master

./: .gitignore  MANIFEST.in  README.md  masks_original.txt  setup.cfg  setup.py
Stimuli/EmoCon-task/: rest_instructions.pptx  stimulus_order.xlsx  stimulus_order6.csv  stimulus_order7.csv  stimulus_order_practice.csv
Stimuli/EmotionConscious-task/: con.psyexp  con.py  con_lastrun.py
Stimuli/EmotionNonconscious-task/: noncon.psyexp  noncon.py  nonconBrooke.py  noncon_lastrun.py  siteConfig.yaml  stimulus_order.csv
Stimuli/EmotionRegulation-task/: stimulus_orderA.csv  stimulus_orderB.csv  stimulus_valence_orderA.csv  stimulus_valence_orderB.csv
Stimuli/GoNoGo-task/: stimulus_order.csv
config/: README.md  Xconfig.json  act_models.csv  biotypes.json  config.json  masks.txt  ppi_models.csv  ppi_models_original.csv  tasks.json
masks/plip/: 003590_Right_10mm_dlPFC_Reward_46_8_28.nii  011581_Left_10mm_infTemp_Salience_n44_n66_n8.nii  012648_Right_10mm_dParietal_CogCon_48_n46_44.nii  017762_Right_Amygdala_Reward.nii  024339_Right_10mm_infOccip_Attention_30_n92_0.nii  032437_Left_Putamen_CogCon.nii  075181_Left_vStriatum_DMN.nii  082100_Right_10mm_dACC_Reward_6_34_18.nii  088634_Left_10mm_Declive_Attention_n36_n62_n30.nii  (+98 more)
plip/: README.md  __init__.py  _version.py  definitions.py  pipeline.py
plip/modeling/: prep.py  (+6 more)
plipify_fmriprep/: confounds_tsv2mat.py  file_tracking.xls  make_ic_regressors.py  nuisance_params_14.txt  nuisance_regressors_scratch.ipynb  plipify_fmriprep.sh  plipify_fmriprep_LUNA.sh  plipify_fmriprep_TIRED.sh  prep_icregressors_for_modeledsubs.sh
(+237 files in other folders)
