[metadata]
author = The PANLab team
author_email = pstetz@stanford.edu
description =
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
url = https://github.com/WilliamsPANLab/plip

[options]
python_requires = >=3.7
install_requires =
    pytest
    flake8
    numpy
    pandas
    nibabel
    tqdm
    scipy
packages = find:

[versioneer]
VCS = git
style = pep440
versionfile_source = plip/_version.py
versionfile_build = plip/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
per-file-ignores =
    **/__init__.py : F401
    versioneer.py : E501
    plip/_version.py : E501
    plip/preproc/anat/general.py : E124, E128, E221
    plip/utils/fsl_in_docker.py : E501
